--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,16 @@
     "paths": {
       "@/*": ["src/*"]
     },
-    "lib": ["esnext", "dom", "dom.iterable", "scripthost"]
+    "lib": [
+      "esnext",
+      "dom",
+      "dom.iterable",
+      "scripthost",
+      "es5",
+      "es6",
+      "es7",
+      "es2015.promise"
+    ]
   },
   "include": [
     "src/**/*.ts",
